优化代码，完成状态字典管理
